# isr-drone-deployment-trade-study

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: advanced_ops_base.yaml  base.yaml  demo_priority.yaml  policy_comparison_heterogeneous.yaml
configs/sweeps/: demo_priority_trade_study.yaml  sweep_01.yaml  sweep_02_patrol.yaml  sweep_03_static_validation.yaml
docs/: 00_project_overview.md  01_problem_statement.md  02_modeling_assumptions.md  03_experiments_plan.md  04_results_summary.md  05_demo_walkthrough.md  06_anduril_role_alignment.md  06_role_alignment.md  07_dynamic_policy_comparison.md  INTERVIEW_NOTES.md  index.html
docs/live_demo/: index.html
docs/live_demo/assets/: styles.css
scripts/: _bootstrap.py  _pages_index.html  build_live_demo.py  export_results.py  run_demo.py  run_pipeline.py  run_policy_comparison.py  run_sweep.py
src/anduril_ops/: __init__.py
src/anduril_ops/analytics/: storage.py
src/anduril_ops/dashboard/: __init__.py  html.py  live_demo.py
src/anduril_ops/io/: config.py
src/anduril_ops/mission/: __init__.py  briefing.py
src/anduril_ops/sim/: metrics.py  monte_carlo.py  placements.py  scenario.py
src/anduril_ops/utils/: seed.py
src/anduril_ops/viz/: plots.py
src/isr_trade_study/: __init__.py
src/isr_trade_study/analytics/: __init__.py  storage.py
src/isr_trade_study/dashboard/: __init__.py  html.py  live_demo.py  theme.py
src/isr_trade_study/io/: __init__.py  config.py
src/isr_trade_study/sim/: __init__.py  metrics.py  monte_carlo.py  (+2 more)
tests/: test_simulation.py
(+4 files in other folders)
